--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ body {
 /* ######### DESKTOP ########### */
 @media screen and (min-width: 400px) {
     .component {
-        width: 700px;
-        height: 250px;
+        width: 670px;
+        height: 270px;
         grid-template-columns: 250px auto;
         grid-template-areas: "img txt";
+        /* overflow: hidden; */
 
     }
     .image {
@@ -46,6 +47,9 @@ body {
     .text {
         border-radius: 0 20px 20px 0;
     }
+    .share-popup {
+        box-shadow: 0 1rem 3rem -0.5rem var(--blue);
+    }
 }
 /* ######### MOBILE ########### */
 
@@ -53,6 +57,8 @@ body {
     grid-area: img;
     background: url('images/drawers.jpg');
     background-size: cover;
+    height: 270px;
+    
 
 }
 .text {
@@ -91,7 +97,7 @@ b {
     border-radius: 50%;
     margin-right: 1rem;
 }
-.share {
+.share-btn {
     justify-self: flex-start;
     display: flex;
     justify-content: center;
@@ -107,10 +113,40 @@ b {
     filter: brightness(90%);
 }
 
-.share:hover {
+.share-btn:hover {
     background: var(--dark);
 }
 
-.share:hover #arrow {
+.share-btn:hover #arrow {
     filter: brightness(300%);
+}
+.share-popup {
+    opacity: 0; /* ########## */
+    z-index: 3;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2rem 1rem 2rem;
+    width: 150px;
+    height: 20px;
+    background: var(--dark);
+    border-radius: 10px;
+    transform: translate(-88px, -110px);
+}
+.share-popup::after {
+    z-index: 8;
+    content: '';
+    background: var(--dark);
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: -40px;
+    top: 30px;
+    clip-path: polygon(0 0, 100% 0, 50% 80%);
+
+}
+.share:focus-within .share-popup{
+    opacity: 1;
 }
