--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .attribution { 
     font-size: 11px;
     text-align: center;
-    position: fixed;
+    justify-self: flex-end;
     bottom: 40px; 
 }
 .attribution a {
@@ -23,6 +23,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--light);
+    padding: 0;
 }
 .component {
     background-color: white;
@@ -30,70 +31,16 @@ body {
     display: grid;
     border-radius: 20px;
 }
-/* ######### DESKTOP ########### */
-@media screen and (min-width: 400px) {
-    .component {
-        width: 670px;
-        height: 270px;
-        grid-template-columns: 250px auto;
-        grid-template-areas: "img txt";
-        /* overflow: hidden; */
-
-    }
-    .image {
-        border-radius: 20px 0 0 20px;
-    
-    }
-    .text {
-        border-radius: 0 20px 20px 0;
-    }
-        /* popup */
-    .share-popup, .share-popup::after {
-        box-shadow: 0 1rem 3rem -0.5rem var(--blue);
-    }
-    .share-popup {
-        position: absolute;
-        width: 150px;
-        height: 20px;
-        border-radius: 10px;
-        padding: 1rem 4rem 1rem 4rem;
-        transform: translate(-110px, -110px);
-    }
-    .share-popup::after {
-        z-index: 2;
-        content: '';
-        background: var(--dark);
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        left: 110px;
-        top: 45px;
-        clip-path: polygon(0 0, 100% 0, 50% 60%);
-        
-    }
-    .share:focus-within .share-popup{
-        opacity: 1;
-    }
-
-    
-}
-/* ######### MOBILE ########### */
-
+/* ########## COMMON ########## */
 .image {
     grid-area: img;
     background: url('images/drawers.jpg');
     background-size: cover;
-    height: 270px;
-    
-
 }
 .text {
     grid-area: txt;
-    margin: 0;
-    padding: 2rem 2.6rem 2rem 2.6rem;
     color: var(--gray);
     line-height: 1.8rem;
-
 }
 h1 {
     font-size: 1.3rem;
@@ -124,7 +71,6 @@ b {
     margin-right: 1rem;
 }
 .share-btn {
-    justify-self: flex-start;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -154,7 +100,103 @@ b {
     background: var(--dark);
     color: var(--blue);
     letter-spacing: .3rem;
+    
 }
 .share-popup img {
     padding: 0.7rem;
+}
+/* ######### DESKTOP ########### */
+@media screen and (min-width: 400px) {
+    .component {
+        width: 670px;
+        height: 270px;
+        grid-template-columns: 250px auto;
+        grid-template-areas: "img txt";
+        /* overflow: hidden; */
+
+    }
+    .image {
+        border-radius: 20px 0 0 20px;
+        height: 270px;
+    }
+    .text {
+        border-radius: 0 20px 20px 0
+        margin: 0;
+        padding: 2rem 2.6rem 2rem 2.6rem;
+    }
+        /* popup */
+    .share-popup, .share-popup::after {
+        box-shadow: 0 1rem 3rem -0.5rem var(--blue);
+    }
+    .share-popup {
+        position: absolute;
+        width: 150px;
+        height: 20px;
+        border-radius: 10px;
+        padding: 1rem 4rem 1rem 4rem;
+        transform: translate(-110px, -110px);
+    }
+    .share-popup::after {
+        z-index: 2;
+        content: '';
+        background: var(--dark);
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: 110px;
+        top: 45px;
+        clip-path: polygon(0 0, 100% 0, 50% 60%);
+        
+    }
+    .share:focus-within .share-popup{
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    
+}
+/* ######### MOBILE ########### */
+
+@media screen and (max-width: 400px) {
+    .component {
+        max-width: 340px;
+        margin: 10px;
+        grid-template-rows: 150px auto;
+        grid-template-areas:    "img" "txt";
+        /* overflow: hidden; */
+
+    }
+    .image {
+        border-radius: 20px 20px 0 0;
+        max-width: 100%;
+        background-color: aquamarine;
+    }
+    .text {
+        max-width: 100%;
+        border-radius: 0 0 20px 20px;
+        padding: 1.5rem;
+    }
+    .social {
+        width: 100%;
+        border: 1px solid black;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
+    .author {
+        flex-grow: 1;
+    }
+    .share {
+        margin-left: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+    }
+    .share-btn {
+        
+    }
 }
